name: hspec-jenkins-lae
version: 0.1.2
synopsis: Jenkins-friendly XML formatter for Hspec
description: Jenkins-friendly XML formatter for Hspec
author: Kohei Suzuki
maintainer: jean-paul@leastauthority.com
build-type: Simple
cabal-version: >= 1.8
category: Testing
license: MIT
license-file: LICENSE.txt
homepage: https://github.com/LeastAuthority/hspec-jenkins
extra-source-files:
  example/example.cabal
  example/lib/*.hs
  example/test/*.hs
source-repository head
  type: git
  location: git://github.com/LeastAuthority/hspec-jenkins.git

library
  build-depends:
      base >= 4.7 && < 5
    , hspec == 2.5.*
    , blaze-markup
  hs-source-dirs: lib
  ghc-options: -Wall -W
  exposed-modules:
    Test.Hspec.Formatters.Jenkins
